# Medicar

./: .gitignore  pyproject.toml
app/app/: settings.py  urls.py
app/appointment/: serializers.py  views.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py  0002_doctor_medicalspecialty.py  0003_appointmentscheduling.py  0004_auto_20210912_1603.py  0005_auto_20210912_1607.py
app/doctor/: serializers.py  urls.py  views.py
app/user/: serializers.py
